--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:title" content="Enok" />
+  <meta property="og:image" content="assets/Screenshot 2023-11-23 at 7.37.41 AM.png" />
+  <meta name="twitter:image" content="assets/Screenshot 2023-11-23 at 7.37.41 AM.png" />
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="icon" href="assets/Screenshot 2023-11-23 at 7.39.23 AM.png" type="image/icon type">
   <link href="https://fonts.cdnfonts.com/css/satoshi" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">  
   
 </head>
